Add Wi-Fi data API
